# project2

./: pyproject.toml
.jupyter/: jupyter_server_config.py
.jupyter/data/runtime/: jpserver-58390.json  jpserver-69385.json  jpserver-82602.json  jpserver-84275.json  jpserver-85857.json
.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
Files/: Markdown Cheatsheet.md  another_grace_test.txt  grace_test_2.py  test_2.py
